--- a/views/assets.xml
+++ b/views/assets.xml
@@ -3,7 +3,7 @@
     <data>
         <template id="assets" inherit_id="point_of_sale.assets_common" name="Remove Invoice Button from POS">
             <xpath expr="." position="inside">
-                <script type="module" src="/digifact/static/src/js/remove_invoice.js"/>
+                <!-- <script type="module" src="/digifact/static/src/js/remove_invoice.js"/> -->
             </xpath>
         </template>
     </data>
