--- a/views/assets.xml
+++ b/views/assets.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
-        <template id="assets" inherit_id="point_of_sale.assets_backend" name="Remove Invoice Button from POS">
-            <xpath expr="." position="inside">
-                <!-- <script type="module" src="/digifact/static/src/js/remove_invoice.js"/> -->
-            </xpath>
-        </template>
+    <data inherit_id="point_of_sale.pos_assets_backend" name="Fix POS Assets">
+        <xpath expr="." position="inside">
+            <!-- <script type="module" src="/digifact/static/src/js/remove_invoice.js"/> -->
+        </xpath>
     </data>
 </odoo>
