--- a/views/account_move_views.xml
+++ b/views/account_move_views.xml
@@ -1,13 +1,15 @@
 <odoo>
-    <record id="view_move_form_inherit_qr" model="ir.ui.view">
-        <field name="name">account.move.form.inherit.qr</field>
+    <record id="view_move_form_inherit_fel" model="ir.ui.view">
+        <field name="name">account.move.form.inherit.fel</field>
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='invoice_date']" position="after">
-                <field name="reference"/>
-                <field name="number"/>
-                <field name="authorization_number"/>
+            <xpath expr="//sheet" position="inside">
+                <group string="FEL" name="fel_group" colspan="2">
+                    <field name="fel_reference"/>
+                    <field name="fel_number"/>
+                    <field name="fel_authorization_number"/>
+                </group>
             </xpath>
         </field>
     </record>
