--- a/views/assets.xml
+++ b/views/assets.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <template id="force_invoice_assets" inherit_id="point_of_sale.assets_common">
+    <template id="force_invoice_assets" name="POS Assets" inherit_id="point_of_sale.assets_common">
         <xpath expr="." position="inside">
             <script src="/digifact/static/src/js/force_invoice.js"/>
             <link rel="stylesheet" type="text/css" href="/digifact/static/src/css/hide_invoice.css"/>
