--- a/views/pos_order_views.xml
+++ b/views/pos_order_views.xml
@@ -11,4 +11,18 @@
             </form>
         </field>
     </record>
+    <record id="view_pos_order_tree" model="ir.ui.view">
+        <field name="name">pos.order.tree</field>
+        <field name="model">pos.order</field>
+        <field name="arch" type="xml">
+            <tree string="POS Orders">
+                <field name="name"/>
+                <field name="date_order"/>
+                <field name="partner_id"/>
+                <field name="amount_total"/>
+                <field name="state" widget="badge" decoration-info="state == 'draft'" decoration-success="state not in ('draft','cancel','error')" decoration-danger="state == 'error'"/>
+                <!-- Otros campos -->
+            </tree>
+        </field>
+    </record>
 </odoo>
