--- a/views/account_move_views.xml
+++ b/views/account_move_views.xml
@@ -21,4 +21,19 @@
             </xpath>
         </field>
     </record>
+
+    <record id="view_move_tree_inherit_fel" model="ir.ui.view">
+        <field name="name">account.move.tree.inherit.fel</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//tree/field[@name='state']" position="after">
+                <field name="certified" widget="boolean_button" options="{'terminology': {'true': 'Certificado', 'false': 'No Certificado'}}"/>
+            </xpath>
+            <xpath expr="//tree/field[@name='state']" position="attributes">
+                <attribute name="widget">statusbar</attribute>
+                <attribute name="options">{'clickable': False, 'tooltip': 'note'}</attribute>
+            </xpath>
+        </field>
+    </record>
 </odoo>
