adding regimen_ISR to UI

--- a/views/res_company_views.xml
+++ b/views/res_company_views.xml
@@ -8,6 +8,7 @@
                 <group string="Configuración FEL">
                     <field name="fel_user"/>
                     <field name="fel_password"/>
+                    <field name="regimen_ISR"/>
                 </group>
             </xpath>
         </field>
